# marketplace

./: .gitignore  PAUSE_IMPLEMENTATION_GUIDE.md  README.md
.github/workflows/: ci.yml
contracts/collection_nft_erc1155/src/: lib.rs  test.rs
contracts/collection_nft_erc721/src/: lib.rs  test.rs
contracts/launchpad/: README.md
contracts/launchpad/src/: contract.rs  storage.rs  test.rs
contracts/lazy_mint_erc1155/: Cargo.toml
contracts/lazy_mint_erc1155/src/: lib.rs  test.rs
contracts/lazy_mint_erc721/: Cargo.toml
contracts/lazy_mint_erc721/src/: lib.rs  test.rs
contracts/soroban-marketplace/: Makefile  README.md
contracts/soroban-marketplace/docs/: PAUSE_MECHANISM.md
contracts/soroban-marketplace/src/: contract.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/soroban-marketplace/test_snapshots/test/: test_add_and_remove_token_whitelist.1.json  (+21 more)
frontend/afristore-app/: .env.example  .eslintrc.json  README.md  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo  types.d.ts
frontend/afristore-app/docs/: MAGIC_WALLET_INTEGRATION.md
indexer/: .env.example  Dockerfile  RATE_LIMITING.md  README.md  REDIS_INTEGRATION.md  package-lock.json  package.json  tsconfig.json
indexer/prisma/: schema.prisma
indexer/src/: index.ts  parser.ts  poller.ts  redis.ts
indexer/src/__tests__/: api.test.ts  parser.test.ts  poller.test.ts  rate-limit.test.ts
indexer/src/api/: cache-middleware.ts  rate-limit-middleware.ts  routes.ts
scripts/deploy/: DEPLOYMENT_GUIDE.md  deploy_contract.sh  fund_account.sh
(+68 files in other folders)
